cleanup daemon tests: init daemon earlier
GitOrigin-RevId: 6d9512ffcc823df092af818d9ee4a38931806a51